# anydesk-waiting-time-bypass

./: Cargo.toml  README.md
src/: directory_cleaner.rs  main.rs  process_manager.rs  reset_adsk.rs
